--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"plugins":["plugins","help","who","about","echo","calculator"],"sudo_members":[63845626],"token":"YOUR TOKEN HERE","username":"BOT USERNAME"}
+{"plugins":["plugins","instagram"],"sudo_members":[119989724],"token":"YOUR TOKEN HERE","username":"BOT USERNAME"}
